<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <ScrollView 
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
        android:id="@+id/outLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical">
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true"
        android:orientation="vertical"
        android:layout_marginTop="15dp" >

        <EditText
            android:id="@+id/account_na"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_account_na"
            android:inputType="textAutoCorrect|textCapSentences"
            android:minHeight="48dip"
            android:singleLine="true" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/category_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:text="@string/category_label" />

        <Button
            android:id="@+id/category_na"
            style="@style/TextAppearance.EditEvent_SpinnerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dip"
            android:gravity="left|center_vertical"
            />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/optional_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:text="@string/optional_label" />

        <EditText
            android:id="@+id/accountno"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_accountno"
            android:inputType="number"
            android:minHeight="48dip" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/website"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_website"
            android:inputType="textEmailAddress"
            android:minHeight="48dip" />
    </LinearLayout>
    
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/phoneno"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_phoneno"
            android:phoneNumber="true"
            android:minHeight="48dip" />
    </LinearLayout>
    
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/memo"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_memo"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:minHeight="48dip" />
    </LinearLayout>

      </LinearLayout> 
</ScrollView>
</LinearLayout>
