<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >

    <RelativeLayout
        android:id="@+id/toptextlayoput"
        android:layout_width="fill_parent"
        android:layout_height="55dp" >

	  <Spinner
            android:id="@+id/repeat_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" 
            android:layout_marginLeft="2dp"
            />

        <Switch
            android:id="@+id/is_repeat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:checked="false" />

    </RelativeLayout>

    <View
        android:id="@+id/lineview"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#3399CC" >
    </View>


    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
         >
        
 	<TextView
        android:id="@+id/everytextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:text="@string/repeat_unit"
        android:textAppearance="?android:attr/textAppearance" 
        android:textSize="16sp"
        />
        
          
        <Spinner
            android:id="@+id/repeat_frequency_spinner"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/everytextView"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
             >
        </Spinner>

        <TextView
            android:id="@+id/typetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/repeat_frequency_spinner"
            android:layout_marginLeft="10dp"
            android:text="@string/days"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearance" />

    </RelativeLayout>
    
     <LinearLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" 
         >

   	 <Spinner
   	     android:id="@+id/is_forever_spinner"
   	     android:layout_width="wrap_content"
   	     android:layout_height="wrap_content"
   	     android:layout_marginLeft="10dp" 
   	     android:layout_marginBottom="0dp"
   	     />

     <Button
            android:id="@+id/repeating_until"
            style="@style/TextAppearance.EditEvent_SpinnerButton1"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="left|center_vertical"
            android:visibility="visible"
            android:textSize="16sp"
            />
    
    </LinearLayout>
    
    <TextView
         android:id="@+id/atype_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="@string/amount_type" 
         android:layout_marginTop="10dp"
         android:textColor="#FFAAAAAA"
         android:textSize="16sp"
         />
    
     <Spinner
        android:id="@+id/is_fixed_spinner"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:visibility="visible"
        />
    
</LinearLayout>